--- a/armandsl.github.io/Backup/armandsl.github.io.csproj
+++ b/armandsl.github.io/Backup/armandsl.github.io.csproj
@@ -3,6 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <PackageId>armandsl.github.io</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>armandsl</Authors>
+    <Company>GitHub</Company>
+    <PackageDescription>This package adds an armandsl!</PackageDescription>
+    <RepositoryUrl>https://github.com/armandsl/armandsl.github.io</RepositoryUrl>
   </PropertyGroup>
 
 </Project>
