--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 version: 1.0.{build}
 image: Visual Studio 2019
-configuration: Debug, Release
+configuration: Release
 platform: Any CPU
 environment:
   APPVEYOR: True
