--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,6 @@
 title: M A Zuha
 logo: /assets/img/logo.png
-description: Welcome to <strong>M A Zuha</strong> - This is where I will tell my friends way too much about me!. 
-
+description: This is where I will tell my friends way too much about me! 
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
-    plugins:
-    - jekyll-theme-minimal
