--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: M A Zuha
 logo: /assets/img/logo.png
-description: This is where I will tell my friends way too much about me! 
+description: Used a Jekyll theme for GitHub Pages! 
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
