--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -12,9 +12,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Build the site in the jekyll/builder container
-      run: |
-        docker run \
-        -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
-        jekyll/builder:latest /bin/bash -c "chmod 777 /srv/jekyll && jekyll build --future"
+- uses: actions/checkout@v2
+- name: Install dependencies
+  run: docker run -v ${{ github.workspace }}:/srv/jekyll jekyll/builder:latest bundle install
+- name: Build the site in the jekyll/builder container
+  run: |
+    docker run \
+      -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
+      jekyll/builder:latest /bin/bash -c "chmod 777 /srv/jekyll && jekyll build --future"
