--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: M A Zuha
+title: M A ZUHA | GitHub Profile Page!
 logo: /assets/img/logo.png
-description: Used a Jekyll theme for GitHub Pages! 
+description: Welcome to M A Zuha GitHub Profile Site! This site is used Minimal Jekyll theme for GitHub Pages. Help us make these docs or pages great! 
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
