--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: M A ZUHA
-logo: /assets/img/logo.png
-description: GitHub Profile Page! 
+description: GitHub Profile Site! 
+logo: /assets/img/repo-logo.png
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
